# adaptive-reasoner

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  PROJECTMAP.md  README.md  TESTING.md  TESTS_PLAN.md  TESTS_REFACTORING.md  build.rs  example_config.json
src/: app.rs  config.rs  consts.rs  errors.rs  handlers.rs  lib.rs  llm_client.rs  llm_request.rs  main.rs
src/config/: mod.rs
src/llm_client/: mod.rs
src/models/: mod.rs  model_list.rs  request.rs  response_direct.rs  response_stream.rs
src/service/: mod.rs
src/test_utils/: assertions.rs  helpers.rs  mod.rs
tests/: http.rs  integration.rs
tests/common/: mock_server.rs  mod.rs  setup.rs  sse.rs  streaming.rs
tests/fixtures/: mod.rs
tests/mocks/: mod.rs
