[package]
name = "adaptive_reasoner"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

actix-web = "4"
futures-core = "0.3.31"
tokio-stream = "0.1.17"
phf = { version = "0.13.1", features = ["macros"] }
env_logger = "0.11.8"
dotenv = "0.15.0"

[features]
# reasoning = []
